wpi/checkerframework_3.34.0_results_WPI/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8-after-wpi.txt
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestRunner.java:92: error: (contracts.precondition) $$ 3 $$ result.setRecognizerExpressionsTestcase $$ result.recognizerExpressionsTestcase is @UnknownInitialization $$ result.recognizerExpressionsTestcase is @FBCBottom $$ ( 2876, 2954 ) $$ precondition of result.setRecognizerExpressionsTestcase is not satisfied.
        result.setRecognizerExpressionsTestcase(new PatternRecognizer(regexpTestcase));
                                               ^
  found   : result.recognizerExpressionsTestcase is @UnknownInitialization
  required: result.recognizerExpressionsTestcase is @FBCBottom
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestRunner.java:93: error: (contracts.precondition) $$ 3 $$ result.setRecognizerExpressionsTestsuite $$ result.recognizerExpressionsTestcase is @UnknownInitialization $$ result.recognizerExpressionsTestcase is @FBCBottom $$ ( 2964, 3044 ) $$ precondition of result.setRecognizerExpressionsTestsuite is not satisfied.
        result.setRecognizerExpressionsTestsuite(new PatternRecognizer(regexpTestsuite));
                                                ^
  found   : result.recognizerExpressionsTestcase is @UnknownInitialization
  required: result.recognizerExpressionsTestcase is @FBCBottom
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:101: error: (dereference.of.nullable) $$ 1 $$ recognizerTags $$ ( 3408, 3422 ) $$ dereference of possibly-null reference recognizerTags
        return recognizerTags.validate(test.getTags());
               ^
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:23: error: (dereference.of.nullable) $$ 1 $$ expected $$ ( 1126, 1134 ) $$ dereference of possibly-null reference expected
        if (!expected.equals(actual)) throw new AssertionError();
             ^
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:26: error: (dereference.of.nullable) $$ 1 $$ expected $$ ( 1297, 1305 ) $$ dereference of possibly-null reference expected
        if (!expected.equals(actual)) throw new AssertionError(message);
             ^
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:59: error: (argument) $$ 4 $$ arg0 $$ Matcher.matches $$ T extends @Initialized @Nullable Object $$ @Initialized @NonNull Object $$ ( 3019, 3025 ) $$ incompatible argument for parameter arg0 of Matcher.matches.
        if (!matcher.matches(actual)) throw new AssertionError(reason);
                             ^
  found   : T extends @Initialized @Nullable Object
  required: @Initialized @NonNull Object
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:62: error: (argument) $$ 4 $$ arg0 $$ Matcher.matches $$ T extends @Initialized @Nullable Object $$ @Initialized @NonNull Object $$ ( 3202, 3208 ) $$ incompatible argument for parameter arg0 of Matcher.matches.
        if (!matcher.matches(actual)) throw new AssertionError();
                             ^
  found   : T extends @Initialized @Nullable Object
  required: @Initialized @NonNull Object
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:37: error: (argument) $$ 4 $$ str $$ StringBuilder constructor $$ @Initialized @MonotonicNonNull String $$ @Initialized @NonNull String $$ ( 1136, 1144 ) $$ incompatible argument for parameter str of StringBuilder constructor.
        StringBuilder sb= new StringBuilder(testname);
                                            ^
  found   : @Initialized @MonotonicNonNull String
  required: @Initialized @NonNull String
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:62: error: (contracts.precondition) $$ 3 $$ ((TestSuite)test).setSuiteFather $$ (TestSuite)test.context is @Nullable $$ (TestSuite)test.context is @Nullable $$ ( 1866, 1904 ) $$ precondition of ((TestSuite)test).setSuiteFather is not satisfied.
            if (test instanceof TestSuite) ((TestSuite)test).setSuiteFather(this);
                                                                           ^
  found   : (TestSuite)test.context is @Nullable
  required: (TestSuite)test.context is @Nullable
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:19: error: (method.invocation) $$ 3 $$ inicializar() $$ @UnderInitialization(ar.fiuba.tecnicas.framework.JTest.XmlPrinter.class) @NonNull XmlPrinter $$ @Initialized @NonNull XmlPrinter $$ ( 449, 462 ) $$ call to inicializar() not allowed on the given receiver.
        inicializar();
                   ^
  found   : @UnderInitialization(ar.fiuba.tecnicas.framework.JTest.XmlPrinter.class) @NonNull XmlPrinter
  required: @Initialized @NonNull XmlPrinter
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:71: error: (dereference.of.nullable) $$ 1 $$ printer $$ ( 2327, 2334 ) $$ dereference of possibly-null reference printer
        printer.println("\t\t\t\t<xs:element name=\"testcase\">\n" +
        ^
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:84: error: (dereference.of.nullable) $$ 1 $$ messsage $$ ( 2879, 2887 ) $$ dereference of possibly-null reference messsage
        if(!messsage.contains(":")) {
            ^
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:97: error: (dereference.of.nullable) $$ 1 $$ printer $$ ( 3284, 3291 ) $$ dereference of possibly-null reference printer
        printer.print("\t\t\t<xs:attribute name=\"" + name + "\" type=\"xs:string\" use=\"optional\"/>" +
        ^
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:113: error: (dereference.of.nullable) $$ 1 $$ printer $$ ( 3773, 3780 ) $$ dereference of possibly-null reference printer
        printer.println("<?xml version=\"1.0\" encoding=\"ISO-8859-1\" ?>\n" +
        ^
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:13: error: (dereference.of.nullable) $$ 1 $$ getContext() $$ ( 324, 336 ) $$ dereference of possibly-null reference getContext()
                getContext().put("k",2);
                          ^
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:24: error: (dereference.of.nullable) $$ 1 $$ suite.getContext() $$ ( 724, 742 ) $$ dereference of possibly-null reference suite.getContext()
        Assert.assertEquals("Objects have different value", suite.getContext().get("k"), suite.getContext().get("h"));
                                                                            ^
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:27: error: (dereference.of.nullable) $$ 1 $$ suite.getContext() $$ ( 913, 931 ) $$ dereference of possibly-null reference suite.getContext()
        Assert.assertArrayEquals("Arrays have different value",(Double[])suite.getContext().get("list1"),(Double[])suite.getContext().get("list2"));
                                                                                         ^
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:30: error: (unboxing.of.nullable) $$ 1 $$ (Boolean)suite.getContext().get("trueCondition") $$ ( 1090, 1138 ) $$ unboxing a possibly-null reference (Boolean)suite.getContext().get("trueCondition")
        Assert.assertTrue("The condition is false",(Boolean)suite.getContext().get("trueCondition"));
                                                   ^
../dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:30: error: (dereference.of.nullable) $$ 1 $$ suite.getContext() $$ ( 1099, 1117 ) $$ dereference of possibly-null reference suite.getContext()
        Assert.assertTrue("The condition is false",(Boolean)suite.getContext().get("trueCondition"));
                                                                            ^
19 errors
